Fix T83161: Crash when moving ruler endpoints and opening or closing the toolshelf

`invert_snap` could be called before `snap_gizmo->keymap` was found.

Use the lazy initialization in `invert_snap` then.